@@ -860,7 +860,7 @@ accept_script <PATH>
 	Default: "/bin/imdb_parse.sh"
 
 enable_nfo_script <TRUE|FALSE>
-	An external script can be run after a nfo upload. Put his to TRUE to
+	An external script can be run after a nfo upload. Put this to TRUE to
 	run the external script.
 	Default: FALSE
 
@@ -870,7 +870,7 @@ nfo_script <PATH>
 	Default: "/bin/psxc-imdb.sh"
 
 enable_complete_script <TRUE|FALSE>
-	An external script can be run after a release is complete. Put his to
+	An external script can be run after a release is complete. Put this to
 	TRUE to run the external script.
 	Default: FALSE
 
@@ -880,8 +880,8 @@ complete_script <PATH>
 	Default: "/bin/nfo_copy.sh"
 
 enable_mp3_script <TRUE|FALSE>
-	Put here the path to the external script which should be run after
-	first uploaded mp3 in an audio-release.
+	An external script can be run after a mp3-file is uploaded. Put this to
+	TRUE to run the external script.
 	Default: FALSE
 
 mp3_script <PATH>
@@ -893,6 +893,17 @@ mp3_script_cookies <STRING>
 	Put here what should be used as args for the external script after
 	first uploaded mp3 in an audio release.
 	Default: "0 0 0 1 0 1 - \"%w\" \"%?\""
+
+enable_banned_script <TRUE|FALSE>
+	An external script can be run after a file is marked as banned (usually
+	mp3-files, based on genre/year/etc). Put this to TRUE to run the
+	external script.
+	Default: FALSE
+	
+banned_script <PATH>
+	Put here the path to the external script which should be run if a
+	banned file is found.
+	Default: "/bin/mp3-ban.sh"
 
 enable_unduper_script <TRUE|FALSE>
 	If you allow sfv to be uploaded after other files, some files may be
